{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerController_Map",
            "id": "8719d7e2-ddd3-48ba-9a76-c4117a063f47",
            "actions": [
                {
                    "name": "PlayerActions",
                    "type": "Value",
                    "id": "9ac0c7d4-0c38-4c58-bac3-0ef2712a0c6d",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD_Move",
                    "id": "841887d3-02d0-4a23-afca-4248698f02e5",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8a0f1a3b-c033-4135-8526-26f029a617fb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9a067c12-1a81-4954-a145-112e6e2461ad",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6abcca7d-9aa9-4512-abfd-93f717887499",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3cd96371-19f4-4e21-8543-94ac6605bd3d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ed021844-7df2-4829-acf5-eaf6c3cc9744",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}